--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Page Title</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+  <meta name="description" content="Sample description">
+  <meta name="keywords" content="HTML, CSS, JavaScript">
+  <meta name="author" content="John Doe">
   <script src='main.js'></script>
 </head>
 <body>
-  
+  Yesterday
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>Name</th>
+    </tr>
+    <tr>
+      <td>Sanjay</td>
+      <td>sanjay@gmail.com</td>
+    </tr>
+  </table>
 </body>
 </html>
